--- a/Course5 Front_End Advanced/MVC/BookManagement/Views/Shared/_Layout.cshtml
+++ b/Course5 Front_End Advanced/MVC/BookManagement/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - EricHsu's Project</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/UserStyle.css" rel="stylesheet" type="text/css" />
@@ -14,15 +14,9 @@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/kendo.all.min.js"></script>
 </head>
-
-<style type="text/css">
-    body {
-        font-family: 微软雅黑
-    }
-</style>
 <body>
     <script src="~/Scripts/kendo.all.min.js"></script>
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: #99b2db ; border-color: #99b2db">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: black ; border-color: black">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" style="color:lightseagreen">
