--- a/Course5 Front_End Advanced/MVC/BookManagement/Views/Shared/_Layout.cshtml
+++ b/Course5 Front_End Advanced/MVC/BookManagement/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("圖書維護系統", "Index", "Book", new { area = "" }, new { @class = "navbar-brand" })
+                </button>/
+                @Html.ActionLink("圖書維護系統", "/Index", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
