--- a/Course5 Front_End Advanced/MVC/BookManagement/Views/Shared/_Layout.cshtml
+++ b/Course5 Front_End Advanced/MVC/BookManagement/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/UserStyle.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="~/css/kendo.common-material.min.css">
+    <link rel="stylesheet" href="~/css/kendo.material.min.css">
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 </head>
@@ -36,7 +37,7 @@
                 <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
             </footer>*@
     </div>
-
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/kendo.all.min.js"></script>
 </body>
